--- a/observer/observerConfiguration.json
+++ b/observer/observerConfiguration.json
@@ -1,17 +1,316 @@
 {
-    "0": {
-        "addr": "http://muschest:8080/snapshot",
-        "rot": "0",
-        "az": "[[0, 0], [1920, 0], [1920, 1080], [0, 1080]]"
-    },
-    "2": {
-        "addr": "http://muschest:8082/snapshot",
-        "rot": "0",
-        "az":  "[[0, 0], [1920, 0], [1920, 1080], [0, 1080]]"
-    },
-    "4": {
-        "addr": "http://muschest:8084/snapshot",
-        "rot": "0",
-        "az":  "[[0, 0], [1920, 0], [1920, 1080], [0, 1080]]"
-    }
+  "0": {
+    "addr": "http://muschest:8080/snapshot",
+    "rot": false,
+    "az": "[[732.0, 0.0], [494.0, 1080.0], [1152.0, 1080.0], [1550.0, 180.0], [1000.0, 0.0]]"
+  },
+  "2": {
+    "addr": "http://muschest:8084/snapshot",
+    "rot": false,
+    "az": "[[650.0, 0.0], [250.0, 388.0], [918.0, 1077.0], [1241.0, 1077.0], [1525.0, 888.0], [890.0, 0.0]]"
+  },
+  "4": {
+    "addr": "http://muschest:8082/snapshot",
+    "rot": false,
+    "az": "[[622.0, 0.0], [408.0, 209.0], [1030.0, 1080.0], [1175.0, 1080.0], [1607.0, 920.0], [1194.0, 0.0]]"
+  },
+  "rsc": [
+    [
+      0,
+      [
+        [
+          [
+            628,
+            864
+          ],
+          [
+            743,
+            989
+          ],
+          [
+            766,
+            896
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            1006,
+            217
+          ],
+          [
+            1070,
+            326
+          ],
+          [
+            1212,
+            248
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            553,
+            379
+          ],
+          [
+            577,
+            567
+          ],
+          [
+            659,
+            487
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            1409,
+            756
+          ],
+          [
+            1317,
+            796
+          ],
+          [
+            1367,
+            893
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      0,
+      [
+        [
+          [
+            1267,
+            369
+          ],
+          [
+            1229,
+            489
+          ],
+          [
+            1365,
+            528
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            1021,
+            230
+          ],
+          [
+            815,
+            248
+          ],
+          [
+            897,
+            338
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      0,
+      [
+        [
+          [
+            992,
+            1053
+          ],
+          [
+            1094,
+            996
+          ],
+          [
+            1001,
+            971
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            1309,
+            716
+          ],
+          [
+            1224,
+            768
+          ],
+          [
+            1283,
+            863
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            738,
+            304
+          ],
+          [
+            720,
+            489
+          ],
+          [
+            814,
+            442
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
+    ]
+  ]
 }
