various; trying htmx on config page

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,18 +1,23 @@
 {
   "0": {
-    "addr": "http://muschest:8080/snapshot",
+    "addr": "http://localhost:8080/snapshot",
     "rot": false,
     "az": "[[732.0, 0.0], [494.0, 1080.0], [1152.0, 1080.0], [1550.0, 180.0], [1000.0, 0.0]]"
   },
   "2": {
-    "addr": "http://muschest:8084/snapshot",
+    "addr": "http://localhost:8082/snapshot",
     "rot": false,
-    "az": "[[650.0, 0.0], [250.0, 388.0], [918.0, 1077.0], [1241.0, 1077.0], [1525.0, 888.0], [890.0, 0.0]]"
+    "az": "[[375.0, 221.0], [1006.0, 1065.0], [1250.0, 1080.0], [1600.0, 917.0], [1111.0, 24.0], [647.0, 17.0]]"
   },
   "4": {
-    "addr": "http://muschest:8082/snapshot",
+    "addr": "http://localhost:8084/snapshot",
     "rot": false,
-    "az": "[[622.0, 0.0], [408.0, 209.0], [1030.0, 1080.0], [1175.0, 1080.0], [1607.0, 920.0], [1194.0, 0.0]]"
+    "az": "[[255.0, 393.0], [951.0, 1074.0], [1233.0, 1074.0], [1550.0, 882.0], [905.0, 15.0], [638.0, 15.0]]"
+  },
+  "6": {
+    "addr": "http://localhost:8086/snapshot",
+    "rot": false,
+    "az": "[[125.0, 1012.0], [211.0, 1080.0], [875.0, 1080.0], [1400.0, 550.0], [833.0, 50.0]]"
   },
   "rsc": [
     [
@@ -20,16 +25,16 @@
       [
         [
           [
-            628,
-            864
+            1257,
+            423
           ],
           [
-            743,
-            989
+            1216,
+            542
           ],
           [
-            766,
-            896
+            1356,
+            580
           ]
         ],
         [
@@ -53,16 +58,49 @@
       [
         [
           [
-            1006,
-            217
+            1066,
+            266
           ],
           [
-            1070,
-            326
+            861,
+            284
           ],
           [
-            1212,
-            248
+            945,
+            374
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            302,
+            816
+          ],
+          [
+            361,
+            974
+          ],
+          [
+            411,
+            897
           ]
         ],
         [
@@ -86,16 +124,16 @@
       [
         [
           [
-            553,
-            379
+            685,
+            269
           ],
           [
-            577,
-            567
+            672,
+            456
           ],
           [
-            659,
-            487
+            765,
+            406
           ]
         ],
         [
@@ -119,16 +157,49 @@
       [
         [
           [
-            1409,
-            756
+            1351,
+            736
           ],
           [
-            1317,
-            796
+            1270,
+            789
           ],
           [
-            1367,
-            893
+            1327,
+            879
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            881,
+            386
+          ],
+          [
+            680,
+            434
+          ],
+          [
+            772,
+            513
           ]
         ],
         [
@@ -152,16 +223,16 @@
       [
         [
           [
-            1267,
-            369
+            643,
+            920
           ],
           [
-            1229,
-            489
+            752,
+            1032
           ],
           [
-            1365,
-            528
+            774,
+            946
           ]
         ],
         [
@@ -185,16 +256,49 @@
       [
         [
           [
-            1021,
-            230
+            948,
+            169
           ],
           [
-            815,
-            248
+            1012,
+            277
           ],
           [
-            897,
-            338
+            1155,
+            194
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            1047,
+            611
+          ],
+          [
+            970,
+            706
+          ],
+          [
+            1086,
+            795
           ]
         ],
         [
@@ -218,16 +322,16 @@
       [
         [
           [
-            992,
-            1053
+            1002,
+            283
           ],
           [
-            1094,
-            996
+            834,
+            410
           ],
           [
-            1001,
-            971
+            952,
+            441
           ]
         ],
         [
@@ -251,16 +355,16 @@
       [
         [
           [
-            1309,
-            716
+            1380,
+            713
           ],
           [
-            1224,
-            768
+            1287,
+            754
           ],
           [
-            1283,
-            863
+            1340,
+            856
           ]
         ],
         [
@@ -284,16 +388,16 @@
       [
         [
           [
-            738,
-            304
+            603,
+            417
           ],
           [
-            720,
-            489
+            630,
+            601
           ],
           [
-            814,
-            442
+            710,
+            527
           ]
         ],
         [
