dynamic calibration plan input

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -2,7 +2,22 @@
   "0": {
     "addr": "http://localhost:8080/snapshot",
     "rot": false,
-    "az": "[[21.0, 1091.0], [1221.0, 1088.0], [1239.0, 589.0], [365.0, 474.0], [84.0, 734.0]]"
+    "az": "[[676.0, 0.0], [458.0, 894.0], [992.0, 1033.0], [1523.0, 0.0]]"
+  },
+  "2": {
+    "addr": "http://localhost:8082/snapshot",
+    "rot": false,
+    "az": "[[493.0, 455.0], [1381.0, 1080.0], [1492.0, 1080.0], [1852.0, 746.0], [1152.0, 0.0], [822.0, 0.0]]"
+  },
+  "4": {
+    "addr": "http://localhost:8084/snapshot",
+    "rot": false,
+    "az": "[[309.0, 395.0], [978.0, 1080.0], [1315.0, 1080.0], [1576.0, 904.0], [947.0, 0.0], [726.0, 0.0]]"
+  },
+  "6": {
+    "addr": "http://localhost:8086/snapshot",
+    "rot": false,
+    "az": "[[380.0, 1080.0], [1039.0, 1080.0], [1495.0, 300.0], [894.0, 0.0], [782.0, 0.0]]"
   },
   "rsc": [
     [
@@ -10,16 +25,16 @@
       [
         [
           [
-            572,
-            894
+            1225,
+            194
           ],
           [
-            464,
-            968
+            1183,
+            311
           ],
           [
-            527,
-            992
+            1319,
+            354
           ]
         ],
         [
@@ -37,6 +52,449 @@
           ]
         ]
       ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            1096,
+            283
+          ],
+          [
+            891,
+            300
+          ],
+          [
+            975,
+            391
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            499,
+            868
+          ],
+          [
+            599,
+            999
+          ],
+          [
+            627,
+            914
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            832,
+            415
+          ],
+          [
+            878,
+            601
+          ],
+          [
+            953,
+            520
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            1382,
+            759
+          ],
+          [
+            1294,
+            811
+          ],
+          [
+            1351,
+            903
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            946,
+            301
+          ],
+          [
+            760,
+            398
+          ],
+          [
+            870,
+            453
+          ]
+        ],
+        [
+          [
+            815,
+            505
+          ],
+          [
+            815,
+            455
+          ],
+          [
+            895,
+            505
+          ]
+        ]
+      ]
+    ],
+    [
+      0,
+      [
+        [
+          [
+            581,
+            665
+          ],
+          [
+            691,
+            788
+          ],
+          [
+            715,
+            699
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            1264,
+            204
+          ],
+          [
+            1062,
+            249
+          ],
+          [
+            1161,
+            329
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      6,
+      [
+        [
+          [
+            1168,
+            469
+          ],
+          [
+            1113,
+            580
+          ],
+          [
+            1245,
+            635
+          ]
+        ],
+        [
+          [
+            810,
+            645
+          ],
+          [
+            870,
+            645
+          ],
+          [
+            810,
+            725
+          ]
+        ]
+      ]
+    ],
+    [
+      0,
+      [
+        [
+          [
+            983,
+            48
+          ],
+          [
+            795,
+            149
+          ],
+          [
+            909,
+            197
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
+    ],
+    [
+      2,
+      [
+        [
+          [
+            1627,
+            647
+          ],
+          [
+            1546,
+            703
+          ],
+          [
+            1609,
+            796
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
+    ],
+    [
+      4,
+      [
+        [
+          [
+            646,
+            427
+          ],
+          [
+            651,
+            609
+          ],
+          [
+            735,
+            545
+          ]
+        ],
+        [
+          [
+            490,
+            640
+          ],
+          [
+            490,
+            700
+          ],
+          [
+            410,
+            640
+          ]
+        ]
+      ]
     ]
-  ]
+  ],
+  "calibrationPlan": {
+    "0": [
+      [
+        0
+      ],
+      [
+        [
+          500,
+          500
+        ],
+        [
+          440,
+          500
+        ],
+        [
+          500,
+          420
+        ]
+      ]
+    ],
+    "1": [
+      [],
+      []
+    ],
+    "2": [
+      [],
+      [
+        [
+          815,
+          505
+        ],
+        [
+          815,
+          455
+        ],
+        [
+          895,
+          505
+        ]
+      ]
+    ],
+    "3": [
+      [],
+      [
+        [
+          810,
+          645
+        ],
+        [
+          870,
+          645
+        ],
+        [
+          810,
+          725
+        ]
+      ]
+    ],
+    "4": [
+      [],
+      []
+    ],
+    "5": [
+      [],
+      [
+        [
+          490,
+          640
+        ],
+        [
+          490,
+          700
+        ],
+        [
+          410,
+          640
+        ]
+      ]
+    ]
+  }
 }
