--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,324 +1,8 @@
 {
-  "2": {
-    "addr": "http://localhost:8082/snapshot",
-    "rot": false,
-    "az": "[[493.0, 455.0], [1381.0, 1080.0], [1492.0, 1080.0], [1852.0, 746.0], [1152.0, 0.0], [822.0, 0.0]]"
-  },
-  "4": {
-    "addr": "http://localhost:8084/snapshot",
-    "rot": false,
-    "az": "[[309.0, 395.0], [978.0, 1080.0], [1315.0, 1080.0], [1576.0, 904.0], [947.0, 0.0], [726.0, 0.0]]"
-  },
-  "6": {
-    "addr": "http://localhost:8086/snapshot",
-    "rot": false,
-    "az": "[[214.0, 863.0], [594.0, 1080.0], [734.0, 1080.0], [1400.0, 214.0], [1107.0, 3.0], [645.0, 3.0]]"
-  },
-  "rsc": [
-    [
-      "4",
-      [
-        [
-          [
-            1122,
-            289
-          ],
-          [
-            917,
-            309
-          ],
-          [
-            998,
-            397
-          ]
-        ],
-        [
-          [
-            500,
-            500
-          ],
-          [
-            440,
-            500
-          ],
-          [
-            500,
-            420
-          ]
-        ]
-      ]
-    ],
-    [
-      "6",
-      [
-        [
-          [
-            360,
-            634
-          ],
-          [
-            430,
-            781
-          ],
-          [
-            476,
-            694
-          ]
-        ],
-        [
-          [
-            500,
-            500
-          ],
-          [
-            440,
-            500
-          ],
-          [
-            500,
-            420
-          ]
-        ]
-      ]
-    ],
-    [
-      "2",
-      [
-        [
-          [
-            813,
-            404
-          ],
-          [
-            865,
-            591
-          ],
-          [
-            937,
-            502
-          ]
-        ],
-        [
-          [
-            815,
-            505
-          ],
-          [
-            815,
-            455
-          ],
-          [
-            895,
-            505
-          ]
-        ]
-      ]
-    ],
-    [
-      "4",
-      [
-        [
-          [
-            1391,
-            767
-          ],
-          [
-            1309,
-            826
-          ],
-          [
-            1366,
-            902
-          ]
-        ],
-        [
-          [
-            815,
-            505
-          ],
-          [
-            815,
-            455
-          ],
-          [
-            895,
-            505
-          ]
-        ]
-      ]
-    ],
-    [
-      "6",
-      [
-        [
-          [
-            878,
-            116
-          ],
-          [
-            681,
-            196
-          ],
-          [
-            786,
-            258
-          ]
-        ],
-        [
-          [
-            815,
-            505
-          ],
-          [
-            815,
-            455
-          ],
-          [
-            895,
-            505
-          ]
-        ]
-      ]
-    ],
-    [
-      "2",
-      [
-        [
-          [
-            1255,
-            196
-          ],
-          [
-            1053,
-            243
-          ],
-          [
-            1152,
-            323
-          ]
-        ],
-        [
-          [
-            810,
-            645
-          ],
-          [
-            870,
-            645
-          ],
-          [
-            810,
-            725
-          ]
-        ]
-      ]
-    ],
-    [
-      "6",
-      [
-        [
-          [
-            1071,
-            324
-          ],
-          [
-            1004,
-            429
-          ],
-          [
-            1130,
-            499
-          ]
-        ],
-        [
-          [
-            810,
-            645
-          ],
-          [
-            870,
-            645
-          ],
-          [
-            810,
-            725
-          ]
-        ]
-      ]
-    ],
-    [
-      "2",
-      [
-        [
-          [
-            1610,
-            651
-          ],
-          [
-            1529,
-            707
-          ],
-          [
-            1589,
-            804
-          ]
-        ],
-        [
-          [
-            490,
-            640
-          ],
-          [
-            490,
-            700
-          ],
-          [
-            410,
-            640
-          ]
-        ]
-      ]
-    ],
-    [
-      "4",
-      [
-        [
-          [
-            668,
-            425
-          ],
-          [
-            672,
-            607
-          ],
-          [
-            756,
-            545
-          ]
-        ],
-        [
-          [
-            490,
-            640
-          ],
-          [
-            490,
-            700
-          ],
-          [
-            410,
-            640
-          ]
-        ]
-      ]
-    ]
-  ],
+  "rsc": null,
   "calibrationPlan": {
     "0": [
-      [
-        "4",
-        "6"
-      ],
+      [],
       [
         [
           500,
@@ -339,11 +23,7 @@
       []
     ],
     "2": [
-      [
-        "2",
-        "4",
-        "6"
-      ],
+      [],
       [
         [
           815,
@@ -360,10 +40,7 @@
       ]
     ],
     "3": [
-      [
-        "2",
-        "6"
-      ],
+      [],
       [
         [
           810,
@@ -384,10 +61,7 @@
       []
     ],
     "5": [
-      [
-        "2",
-        "4"
-      ],
+      [],
       [
         [
           490,
