Functional action system (2 select and dice roll)

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,8 +1,56 @@
 {
-  "rsc": null,
+  "Dice": {
+    "addr": "http://192.168.8.6/capture?var=framesize&val=11",
+    "rot": false,
+    "az": "[[445.0, 53.0], [34.0, 810.0], [315.0, 1052.0], [1189.0, 1029.0], [1518.0, 839.0], [1531.0, 686.0], [976.0, 24.0]]",
+    "camType": "dice"
+  },
+  "0": {
+    "addr": "http://localhost:8080/snapshot",
+    "rot": false,
+    "az": "[[286.0, 376.0], [629.0, 1044.0], [1306.0, 546.0], [834.0, 45.0]]",
+    "camType": "field"
+  },
+  "rsc": [
+    [
+      "0",
+      [
+        [
+          [
+            906,
+            757
+          ],
+          [
+            787,
+            754
+          ],
+          [
+            767,
+            908
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ]
+  ],
   "calibrationPlan": {
     "0": [
-      [],
+      [
+        "0"
+      ],
       [
         [
           500,
