Dice data collection; dice recognition

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -2,13 +2,19 @@
   "Dice": {
     "addr": "http://192.168.8.6/capture?var=framesize&val=11",
     "rot": false,
-    "az": "[[445.0, 53.0], [34.0, 810.0], [315.0, 1052.0], [1189.0, 1029.0], [1518.0, 839.0], [1531.0, 686.0], [976.0, 24.0]]",
+    "az": "[[347.0, 32.0], [29.0, 649.0], [49.0, 870.0], [258.0, 980.0], [656.0, 986.0], [1079.0, 965.0], [1285.0, 845.0], [1549.0, 672.0], [1584.0, 643.0], [1307.0, 335.0], [1150.0, 139.0], [1013.0, 4.0]]",
     "camType": "dice"
   },
   "0": {
     "addr": "http://localhost:8080/snapshot",
     "rot": false,
-    "az": "[[286.0, 376.0], [629.0, 1044.0], [1306.0, 546.0], [834.0, 45.0]]",
+    "az": "[[530.0, 523.0], [1015.0, 1073.0], [1403.0, 1076.0], [1742.0, 566.0], [1189.0, 34.0]]",
+    "camType": "field"
+  },
+  "2": {
+    "addr": "http://localhost:8082/snapshot",
+    "rot": false,
+    "az": "[[669.0, 495.0], [1280.0, 1068.0], [1700.0, 475.0], [1187.0, 63.0]]",
     "camType": "field"
   },
   "rsc": [
@@ -17,16 +23,49 @@
       [
         [
           [
-            906,
-            757
+            740,
+            479
           ],
           [
-            787,
-            754
+            777,
+            661
           ],
           [
-            767,
-            908
+            951,
+            632
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      "2",
+      [
+        [
+          [
+            1071,
+            434
+          ],
+          [
+            1205,
+            621
+          ],
+          [
+            1203,
+            449
           ]
         ],
         [
@@ -49,7 +88,8 @@
   "calibrationPlan": {
     "0": [
       [
-        "0"
+        "0",
+        "2"
       ],
       [
         [
