--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,169 +1,7 @@
 {
-  "Dice": {
-    "addr": "http://192.168.8.6/capture?var=framesize&val=11",
-    "rot": false,
-    "az": "[[347.0, 32.0], [29.0, 649.0], [49.0, 870.0], [258.0, 980.0], [656.0, 986.0], [1079.0, 965.0], [1285.0, 845.0], [1549.0, 672.0], [1584.0, 643.0], [1307.0, 335.0], [1150.0, 139.0], [1013.0, 4.0]]",
-    "camType": "dice"
-  },
   "0": {
     "addr": "http://localhost:8080/snapshot",
-    "rot": false,
-    "az": "[[530.0, 523.0], [1015.0, 1073.0], [1403.0, 1076.0], [1742.0, 566.0], [1189.0, 34.0]]",
-    "camType": "field"
-  },
-  "2": {
-    "addr": "http://localhost:8082/snapshot",
-    "rot": false,
-    "az": "[[669.0, 495.0], [1280.0, 1068.0], [1700.0, 475.0], [1187.0, 63.0]]",
-    "camType": "field"
-  },
-  "rsc": [
-    [
-      "0",
-      [
-        [
-          [
-            740,
-            479
-          ],
-          [
-            777,
-            661
-          ],
-          [
-            951,
-            632
-          ]
-        ],
-        [
-          [
-            500,
-            500
-          ],
-          [
-            440,
-            500
-          ],
-          [
-            500,
-            420
-          ]
-        ]
-      ]
-    ],
-    [
-      "2",
-      [
-        [
-          [
-            1071,
-            434
-          ],
-          [
-            1205,
-            621
-          ],
-          [
-            1203,
-            449
-          ]
-        ],
-        [
-          [
-            500,
-            500
-          ],
-          [
-            440,
-            500
-          ],
-          [
-            500,
-            420
-          ]
-        ]
-      ]
-    ]
-  ],
-  "calibrationPlan": {
-    "0": [
-      [
-        "0",
-        "2"
-      ],
-      [
-        [
-          500,
-          500
-        ],
-        [
-          440,
-          500
-        ],
-        [
-          500,
-          420
-        ]
-      ]
-    ],
-    "1": [
-      [],
-      []
-    ],
-    "2": [
-      [],
-      [
-        [
-          815,
-          505
-        ],
-        [
-          815,
-          455
-        ],
-        [
-          895,
-          505
-        ]
-      ]
-    ],
-    "3": [
-      [],
-      [
-        [
-          810,
-          645
-        ],
-        [
-          870,
-          645
-        ],
-        [
-          810,
-          725
-        ]
-      ]
-    ],
-    "4": [
-      [],
-      []
-    ],
-    "5": [
-      [],
-      [
-        [
-          490,
-          640
-        ],
-        [
-          490,
-          700
-        ],
-        [
-          410,
-          640
-        ]
-      ]
-    ]
+    "rot": "",
+    "az": "[[759.0, 4.0], [624.0, 661.0], [1194.0, 745.0], [1315.0, 56.0]]"
   }
 }
