Initial harmony server

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,7 +1,42 @@
 {
   "0": {
     "addr": "http://localhost:8080/snapshot",
-    "rot": "",
-    "az": "[[759.0, 4.0], [624.0, 661.0], [1194.0, 745.0], [1315.0, 56.0]]"
-  }
+    "rot": false,
+    "az": "[[712.0, 118.0], [540.0, 625.0], [1216.0, 867.0], [1385.0, 377.0]]"
+  },
+  "rsc": [
+    [
+      "0",
+      [
+        [
+          [
+            976,
+            447
+          ],
+          [
+            899,
+            476
+          ],
+          [
+            932,
+            578
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ]
+  ]
 }
