Object tracker filter

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,20 +1,25 @@
 {
+  "0": {
+    "addr": "http://localhost:8080/snapshot",
+    "rot": false,
+    "az": "[[293.0, 268.0], [301.0, 806.0], [461.0, 927.0], [1434.0, 1068.0], [1440.0, 75.0], [459.0, 138.0]]"
+  },
   "rsc": [
     [
       "0",
       [
         [
           [
-            1262,
-            517
+            1133,
+            495
           ],
           [
-            1329,
-            663
+            1036,
+            525
           ],
           [
-            1373,
-            572
+            1074,
+            657
           ]
         ],
         [
@@ -29,72 +34,6 @@
           [
             500,
             420
-          ]
-        ]
-      ]
-    ],
-    [
-      "0",
-      [
-        [
-          [
-            1020,
-            383
-          ],
-          [
-            1089,
-            528
-          ],
-          [
-            1131,
-            440
-          ]
-        ],
-        [
-          [
-            500,
-            650
-          ],
-          [
-            440,
-            650
-          ],
-          [
-            500,
-            570
-          ]
-        ]
-      ]
-    ],
-    [
-      "0",
-      [
-        [
-          [
-            904,
-            613
-          ],
-          [
-            968,
-            757
-          ],
-          [
-            1008,
-            670
-          ]
-        ],
-        [
-          [
-            650,
-            650
-          ],
-          [
-            590,
-            650
-          ],
-          [
-            650,
-            570
           ]
         ]
       ]
