--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,8 +1,12 @@
 {
   "0": {
-    "addr": "http://localhost:8080/snapshot",
-    "rot": false,
-    "az": "[[293.0, 268.0], [301.0, 806.0], [461.0, 927.0], [1434.0, 1068.0], [1440.0, 75.0], [459.0, 138.0]]"
+    "addr": "http://192.168.2.24/tmpfs/auto.jpg",
+    "rot": "",
+    "az": "[[317.0, 1020.0], [482.0, 1052.0], [690.0, 1046.0], [874.0, 1044.0], [1119.0, 1061.0], [1157.0, 1041.0], [1221.0, 764.0], [1231.0, 150.0], [957.0, 122.0], [765.0, 119.0], [482.0, 101.0], [322.0, 113.0], [290.0, 323.0], [274.0, 513.0], [271.0, 755.0]]",
+    "auth": [
+      "admin",
+      "n00B!cgp"
+    ]
   },
   "rsc": [
     [
@@ -10,16 +14,16 @@
       [
         [
           [
-            1133,
-            495
+            822,
+            595
           ],
           [
-            1036,
-            525
+            748,
+            578
           ],
           [
-            1074,
-            657
+            725,
+            677
           ]
         ],
         [
