--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,8 +1,8 @@
 {
   "0": {
     "addr": "http://192.168.2.24/tmpfs/auto.jpg",
-    "rot": "",
-    "az": "[[317.0, 1020.0], [482.0, 1052.0], [690.0, 1046.0], [874.0, 1044.0], [1119.0, 1061.0], [1157.0, 1041.0], [1221.0, 764.0], [1231.0, 150.0], [957.0, 122.0], [765.0, 119.0], [482.0, 101.0], [322.0, 113.0], [290.0, 323.0], [274.0, 513.0], [271.0, 755.0]]",
+    "rot": false,
+    "az": "[[490.0, 103.0], [330.0, 138.0], [324.0, 852.0], [558.0, 867.0], [727.0, 867.0], [942.0, 849.0], [1156.0, 858.0], [1184.0, 815.0], [1232.0, 253.0], [1224.0, 129.0], [1214.0, 26.0], [830.0, 31.0], [538.0, 37.0]]",
     "auth": [
       "admin",
       "n00B!cgp"
