--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,11 +1,20 @@
 {
   "0": {
-    "addr": "http://192.168.2.24/tmpfs/auto.jpg",
+    "addr": "http://192.168.2.185/tmpfs/auto.jpg",
     "rot": false,
-    "az": "[[275.0, 107.0], [261.0, 147.0], [247.0, 282.0], [242.0, 412.0], [261.0, 622.0], [289.0, 809.0], [312.0, 976.0], [373.0, 1008.0], [546.0, 1014.0], [738.0, 994.0], [920.0, 991.0], [1051.0, 974.0], [1200.0, 968.0], [1177.0, 893.0], [1186.0, 789.0], [1177.0, 711.0], [1186.0, 634.0], [1177.0, 542.0], [1181.0, 455.0], [1181.0, 328.0], [1163.0, 210.0], [1158.0, 115.0], [1149.0, 58.0], [733.0, 63.0], [523.0, 75.0]]",
+    "az": "[[761.0, 373.0], [997.0, 932.0], [1565.0, 632.0], [1255.0, 148.0]]",
     "auth": [
       "admin",
-      "n00B!cgp"
+      "n00B!ccam"
+    ]
+  },
+  "1": {
+    "addr": "http://192.168.2.24/tmpfs/auto.jpg",
+    "rot": false,
+    "az": "[[527.0, 948.0], [1177.0, 1014.0], [1201.0, 412.0], [657.0, 372.0]]",
+    "auth": [
+      "admin",
+      "n00B!ccam"
     ]
   },
   "rsc": [
@@ -14,16 +23,49 @@
       [
         [
           [
-            672,
+            1215,
+            461
+          ],
+          [
+            1168,
             445
           ],
           [
-            676,
-            528
+            1143,
+            505
+          ]
+        ],
+        [
+          [
+            500,
+            500
           ],
           [
-            780,
-            523
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      "1",
+      [
+        [
+          [
+            820,
+            642
+          ],
+          [
+            844,
+            688
+          ],
+          [
+            902,
+            656
           ]
         ],
         [
