Revert to passive after committedChange

--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,1 +1,88 @@
-{}
+{
+  "0": {
+    "addr": "http://192.168.2.185/tmpfs/auto.jpg",
+    "rot": false,
+    "az": "[[1122.0, 552.0], [756.0, 589.0], [718.0, 226.0], [1080.0, 192.0]]",
+    "auth": [
+      "admin",
+      "n00B!ccam"
+    ]
+  },
+  "1": {
+    "addr": "http://192.168.2.24/tmpfs/auto.jpg",
+    "rot": false,
+    "az": "[[861.0, 503.0], [1214.0, 477.0], [1236.0, 840.0], [883.0, 883.0]]",
+    "auth": [
+      "admin",
+      "n00B!ccam"
+    ]
+  },
+  "rsc": [
+    [
+      "0",
+      [
+        [
+          [
+            962,
+            437
+          ],
+          [
+            937,
+            361
+          ],
+          [
+            839,
+            392
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ],
+    [
+      "1",
+      [
+        [
+          [
+            1022,
+            620
+          ],
+          [
+            1043,
+            698
+          ],
+          [
+            1139,
+            668
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ]
+  ]
+}
