--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,1 +1,46 @@
-{}
+{
+  "0": {
+    "addr": "http://192.168.2.185/tmpfs/auto.jpg",
+    "rot": false,
+    "az": "[[468.0, 111.0], [469.0, 348.0], [484.0, 595.0], [497.0, 731.0], [522.0, 906.0], [538.0, 990.0], [546.0, 1019.0], [635.0, 1016.0], [750.0, 1010.0], [932.0, 1001.0], [1181.0, 981.0], [1378.0, 955.0], [1441.0, 947.0], [1450.0, 947.0], [1448.0, 941.0], [1445.0, 662.0], [1422.0, 279.0], [1397.0, 63.0], [1149.0, 60.0], [977.0, 68.0], [877.0, 74.0], [744.0, 80.0]]",
+    "auth": [
+      "admin",
+      "n00B!ccam"
+    ]
+  },
+  "rsc": [
+    [
+      "0",
+      [
+        [
+          [
+            1036,
+            563
+          ],
+          [
+            984,
+            503
+          ],
+          [
+            907,
+            571
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ]
+  ]
+}
