--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
 [project]
 name = "harmony"
+version = "0.0.1"
 requires-python = ">3.10"
+
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+
+[tool.setuptools]
+packages = ["harmony"]
+
+[project.scripts]
+harmony = "harmony.harmonyServer:main"
