--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">3.10"
 requires = ["setuptools", "setuptools-scm"]
 
 [tool.setuptools]
-packages = ["harmony"]
+packages = ["harmony", "observer"]
 
 [project.scripts]
 harmony = "harmony.harmonyServer:main"
+observer = "observer.observerServer:main"
