--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,1 +1,46 @@
-{}
+{
+  "0": {
+    "addr": "http://192.168.2.185/tmpfs/auto.jpg",
+    "rot": false,
+    "az": "[[917.0, 28.0], [149.0, 474.0], [476.0, 996.0], [1305.0, 457.0]]",
+    "auth": [
+      "admin",
+      "n00B!ccam"
+    ]
+  },
+  "rsc": [
+    [
+      "0",
+      [
+        [
+          [
+            874,
+            426
+          ],
+          [
+            854,
+            557
+          ],
+          [
+            922,
+            517
+          ]
+        ],
+        [
+          [
+            500,
+            500
+          ],
+          [
+            440,
+            500
+          ],
+          [
+            500,
+            420
+          ]
+        ]
+      ]
+    ]
+  ]
+}
