--- a/harmony/observerConfiguration.json
+++ b/harmony/observerConfiguration.json
@@ -1,6 +1,6 @@
 {
-  "0": {
-    "addr": "http://192.168.2.185/tmpfs/auto.jpg",
+  "RTSPCamera0": {
+    "addr": "192.168.2.185:554/11",
     "rot": false,
     "az": "[[917.0, 28.0], [149.0, 474.0], [476.0, 996.0], [1305.0, 457.0]]",
     "auth": [
